# pipewire-jack

./: README.md  config.h  meson.build
src/: meson.build  pipewire-jack.c
